--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 
     <footer id="footer" class="footer">
         <ul>
-            <li><a href="https://www.linkedin.com/in/paulo-henrique-pedrassi-35880a2b5">Linkedin</a></li>
-            <li><a href="https://github.com/phpedrassi">GitHub</a></li>
-            <li>CV Download</li>
+            <li><a href="https://www.linkedin.com/in/paulo-henrique-pedrassi-35880a2b5"><img src="./img/linkedinicon.png" alt="Símbolo do linkedin"></a></li>
+            <li><a href="https://github.com/phpedrassi"><img src="./img/githubicon.png" alt="Símbolo do github"></a></li>
+            <li><a href="./cv/CV_PauloHPedrassi_dev.pdf" download="CV_PauloHPedrassi_dev.pdf"><img src="./img/cvicon.png" alt="Símbolo do pdf">CV Download</a></li>
         </ul>
     </footer>
     <a class="back-to-top" href="#intro">❯</a>
